--- a/FE_Onboarding/package.json
+++ b/FE_Onboarding/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "i18next": "^25.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.1"
