Empezando con Azure AD
-Instalando dependencias
-Probando autenticación

--- a/WS_Onboarding/appsettings.json
+++ b/WS_Onboarding/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AzureAd": {
+  "Instance": "https://login.microsoftonline.com/",
+  "Domain": "yourtenant.onmicrosoft.com",
+  "TenantId": "your-tenant-id",
+  "ClientId": "your-client-id"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=container_db_onboarding;Initial Catalog=DB_Onboarding;User Id=sa;Password=OnboardingWorld2025;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
