--- a/WS_Onboarding/WS_Onboarding.csproj
+++ b/WS_Onboarding/WS_Onboarding.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.77.1" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.14.1" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.8.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
