--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,7 +2,7 @@ services:
   container_ws_onboarding:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: WS_Onboarding/Dockerfile.dev
     container_name: docker_ws_onboarding
     ports:
       - "5005:5005"
@@ -10,13 +10,12 @@ services:
       - container_db_onboarding
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - DOTNET_USE_POLLING_FILE_WATCHER=true
       - ConnectionStrings__DefaultConnection=Data Source=container_db_onboarding;Initial Catalog=DB_Onboarding;User Id=sa;Password=OnboardingWorld2025;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;
     networks:
       - onboarding_net
     volumes:
-      - ./WS_Onboarding:/app  # Mount the source code into the container for Hot Reload
-      - /app/bin
-      - /app/obj
+      - ./WS_Onboarding:/app/WS_Onboarding
     restart: unless-stopped
     command: ["dotnet", "watch", "run", "--urls", "http://0.0.0.0:5005"]
   container_db_onboarding:
@@ -32,7 +31,30 @@ services:
     volumes:
       - db_onboarding_data:/var/opt/mssql
     restart: unless-stopped
+  container_fe_onboarding:
+    build:
+      context: ./FE_Onboarding
+      dockerfile: Dockerfile.dev
+    container_name: docker_fe_onboarding
+    ports:
+      - "5173:5173"  # Vite (si usas Vite)
+      - "3000:3000"  # CRA o Next.js
+    volumes:
+      - ./FE_Onboarding:/app
+      - node_modules:/app/node_modules
+    working_dir: /app
+    command: ["npm", "run", "dev"]
+    networks:
+      - onboarding_net
+    depends_on:
+      - container_ws_onboarding
+    restart: unless-stopped
+    environment:
+      - NODE_ENV=development
+      - HOST=0.0.0.0
+      - ROLLUP_USE_NATIVE=false
 networks:
   onboarding_net:
 volumes:
   db_onboarding_data:
+  node_modules:
