--- a/FE_Onboarding/Dockerfile.dev
+++ b/FE_Onboarding/Dockerfile.dev
@@ -19,7 +19,7 @@ COPY . .
 EXPOSE 3000
 EXPOSE 5173
 
-RUN npm run build
+#RUN npm run build
 
 # Comando para iniciar el servidor de desarrollo
 CMD ["npm", "run", "dev"]
