--- a/FE_Onboarding/package.json
+++ b/FE_Onboarding/package.json
@@ -16,6 +16,7 @@
     "i18next": "^25.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.64.0",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
