--- a/FE_Onboarding/package.json
+++ b/FE_Onboarding/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@azure/msal-browser": "^4.24.0",
     "@azure/msal-react": "^3.0.20",
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "i18next": "^25.5.2",
     "react": "^19.1.1",
