--- a/FE_Onboarding/package.json
+++ b/FE_Onboarding/package.json
@@ -21,7 +21,9 @@
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.1"
+    "react-is": "^19.2.0",
+    "react-router-dom": "^7.9.1",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
