Enviar email para recuperar contraseña
- Envia email para recuperar contraseña desde gmail
- PUT WS_Onboarding/User/Outside encripta la contraseña y no la sobreescribe si el valor de contraseña es "" o null
- Al usuario se le envia una nueva contraseña random

--- a/WS_Onboarding/WS_Container/appsettings.json
+++ b/WS_Onboarding/WS_Container/appsettings.json
@@ -20,5 +20,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "SendGrid": {
+    "ApiKey": "tu-api-key-aqui",
+    "FromEmail": "tucorreo@tudominio.com",
+    "FromName": "Tu Nombre o Empresa"
+  },
+  "SMTP": {
+    "from": "noreplaybdoonboarding@gmail.com",
+    "password": "vrrjigdexaaunpqv"
+  },
+  "AppValues": {
+    "RecoverLinkEmail": "http://localhost:5173/client-login",
+    "FromEmail": "1fabc007-7fd6-4334-aa21-0690b54eadaa"
+  },
   "AllowedHosts": "*"
 }
