--- a/WS_Onboarding/WS_Container/appsettings.json
+++ b/WS_Onboarding/WS_Container/appsettings.json
@@ -8,6 +8,11 @@
     "Domain": "jarturoquiros24gmail.onmicrosoft.com",
     "CallbackPath": "/signin-oidc"
   },
+  "Jwt": {
+    "Key": "H7r@N2kL!ePzQ3a#9YtR6vGx0WmT8bFzJ1cD5sLqU2oE7iR9w",
+    "Issuer": "http://localhost:5005",
+    "Audience": "http://localhost:5005"
+  },
   "MicrosoftGraph": {
     "Scopes": "User.Read.All"
   },
