Actualizacion de dockerfiles y TareaContrato
- Actualización de los docker file de backend y frontend para preparar el despliegue
- Columna Estado en TareaContrato
- TareaContrato permite Id_UsuarioResponsable null
- Se removió identity de EstadosTareas
- TareaContrato GetAllFull y GetByIdFull añaden el item Tarea.Descripcion(JSON)
- el endpoint RelacionContratoServicio añade las tareas relacionadas al servicio en la tabla TareaContrato

--- a/FE_Onboarding/Dockerfile
+++ b/FE_Onboarding/Dockerfile
@@ -1,24 +1,30 @@
-# Etapa 1: Build de la aplicación
+# =========================
+# Etapa 1: Build
+# =========================
 FROM node:23-alpine AS build
 
 WORKDIR /app
 
+# Copiar dependencias y restaurar
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 
+# Copiar el código fuente
 COPY . .
+
+# Construir la aplicación
 RUN npm run build
 
-# Etapa 2: Servir la app con un servidor web (nginx o similar)
-FROM nginx:stable-alpine
+# =========================
+# Etapa 2: Servidor estático
+# =========================
+FROM nginx:stable-alpine AS production
 
-# Elimina archivos por defecto de nginx y copia tu build
-RUN rm -rf /usr/share/nginx/html/*
-COPY --from=build /app/build /usr/share/nginx/html
+# Copiar los archivos estáticos generados al contenedor Nginx
+COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copia config opcional si la tienes
-# COPY nginx.conf /etc/nginx/nginx.conf
-
+# Exponer el puerto (Nginx por defecto usa 80)
 EXPOSE 80
 
+# Iniciar Nginx
 CMD ["nginx", "-g", "daemon off;"]
