Actualizar Azure App
- Se han actualizado las credenciales del AzureAD en el appsettings.json del backend para conectar con la app registrada en Azure AD de producción

--- a/WS_Onboarding/WS_Container/appsettings.json
+++ b/WS_Onboarding/WS_Container/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "2775bd27-efe2-4412-b22e-8fea18e0dbb0",
-    "ClientId": "9a7e288c-dd55-486c-a2c3-45097921c925",
-    "ClientSecret": "De48Q~Y3qfTD.--G3K4n1dLrJpvFFu3Gg24Hzdoy",
+    "TenantId": "e06f8a8c-4405-4aa1-9d1c-a8c3213ae239",
+    "ClientId": "b6dea508-eab4-4e44-82bd-4ccf52585ba6",
+    "ClientSecret": "8-n8Q~xh_cKTPFpVE.sdF2jE5N25YspzhbG4ra9g",
     "Scope": "access_as_user",
-    "Domain": "jarturoquiros24gmail.onmicrosoft.com",
+    "Domain": "jquiros@bdo.cr",
     "CallbackPath": "/signin-oidc"
   },
   "Jwt": {
